--- a/style.css
+++ b/style.css
@@ -40,3 +40,7 @@ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;    margi
     font-family: inherit ;
     outline: none;
 }
+
+.notes .hidden {
+    display: none;
+}
