--- a/style.css
+++ b/style.css
@@ -5,21 +5,21 @@ body {
     background-color: rgb(54, 180, 0);
 }
 
-.notes {
+.note {
     background-color: rgb(57, 162, 255);
     margin: 20px;
     height: 400px;
     width: 400px;
 }
 
-.notes .tools {
+.note .tools {
     background-color: rgb(254, 2, 204);
     display: flex;
     justify-content: flex-end;
     padding: 0.5rem;
 }
 
-.notes .tools button {
+.note .tools button {
     background-color: transparent;
     border: none;
     color: white;
@@ -27,14 +27,14 @@ body {
     margin-left: 0.5rem;
 }
 
-.notes .main{
+.note .main{
     height: 100%;
     width: 100%;
     background-color: rgb(214, 197, 231);
     overflow: hidden;
 }
 
-.notes textarea {
+.note textarea {
     height: 100%;
     width: 100%;
     border: none;
@@ -43,7 +43,7 @@ body {
     font-size: 1.2rem;
 }
 
-.notes .hidden {
+.note .hidden {
     display: none;
 }
 
