--- a/style.css
+++ b/style.css
@@ -5,8 +5,24 @@ body {
     background-color: rgb(54, 180, 0);
 }
 
+
+.add {
+    cursor: pointer;
+    background-color: yellow;
+    margin: 2rem auto;
+    position: fixed;
+    border: none;
+    padding: 0.5rem 1rem ;
+    color: rgb(0, 118, 32);
+    border-radius: 3px;
+    
+    top: 1rem;
+    right: 1rem;
+
+}
+
 .note {
-    background-color: rgb(57, 162, 255);
+    background-color: white;
     margin: 20px;
     height: 400px;
     width: 400px;
@@ -17,25 +33,27 @@ body {
     display: flex;
     justify-content: flex-end;
     padding: 0.5rem;
+    width: 100;
 }
 
 .note .tools button {
     background-color: transparent;
     border: none;
+    cursor: pointer;
     color: white;
     font-size: 1rem;
     margin-left: 0.5rem;
 }
 
 .note .main{
-    height: 100%;
+    height: 400px;
     width: 100%;
-    background-color: rgb(214, 197, 231);
+    background-color: rgb(57, 162, 255);
     overflow: hidden;
 }
 
 .note textarea {
-    height: 100%;
+    height: 400px;
     width: 100%;
     border: none;
     font-family: inherit ;
@@ -45,17 +63,4 @@ body {
 
 .note .hidden {
     display: none;
-}
-
-.add {
-    background-color: yellow;
-    margin: 2rem auto;
-    padding: 0.5rem 1rem ;
-    color: rgb(0, 118, 32);
-    border-radius: 3px;
-    position: fixed;
-    border: none;
-    top: 1rem;
-    right: 1rem;
-
 }
