--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 .note {
     background-color: white;
     margin: 20px;
+    box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.2);
     height: 400px;
     width: 400px;
 }
